[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/img/tower/Bomb_03.png" type="Texture" id=1]
[ext_resource path="res://actor/Tower/PlayerCore.gd" type="Script" id=2]
[ext_resource path="res://assets/img/effects/white_glowing_circle.png" type="Texture" id=3]
[ext_resource path="res://assets/img/GUI/Table_03.png" type="Texture" id=4]
[ext_resource path="res://assets/sfx/voices/H_ESEL2.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sfx/voices/H_ECONF1.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sfx/voices/HI_ATACK.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/img/GUI/HUD_Buy_Collector_Icon.png" type="Texture" id=8]
[ext_resource path="res://assets/img/GUI/HUD_To_Collect_Icon.png" type="Texture" id=9]
[ext_resource path="res://assets/img/GUI/Shop_Cristal_Icon_01.png" type="Texture" id=10]
[ext_resource path="res://assets/font/StrenuousBL15.tres" type="DynamicFont" id=11]
[ext_resource path="res://assets/font/StrenuousBL16.tres" type="DynamicFont" id=12]

[sub_resource type="CircleShape2D" id=1]
radius = 75.0479

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 79.4814, 77.9679 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.533333, 0.145098, 0.145098, 0.458824 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.501901, 0.997727 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 6 )
color = Color( 1.3, 0, 0, 1 )

[node name="PlayerCore" type="Area2D"]
script = ExtResource( 2 )
starting_health = 3000

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="BuildingCollision" type="Area2D" parent="." groups=[
"tower_building",
]]

[node name="TowerCollision" type="CollisionShape2D" parent="BuildingCollision"]
shape = SubResource( 2 )

[node name="GUI" type="Node2D" parent="."]

[node name="LifeBar" type="ProgressBar" parent="GUI"]
margin_left = -64.0
margin_top = -88.0
margin_right = 64.0
margin_bottom = -81.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RegenTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Particles2D" type="Particles2D" parent="."]
amount = 1
lifetime = 2.0
process_material = SubResource( 7 )
texture = ExtResource( 3 )

[node name="GeneralGUI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="GeneralGUI"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="GeneralGUI/Control"]
position = Vector2( 960, 912 )
scale = Vector2( 1.216, 0.547 )
texture = ExtResource( 4 )

[node name="CollectButton" type="Button" parent="GeneralGUI/Control"]
margin_left = 753.0
margin_top = 868.0
margin_right = 937.0
margin_bottom = 937.0
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color_hover = Color( 0.133333, 0.792157, 0.160784, 1 )
custom_colors/font_color_pressed = Color( 0.133333, 0.792157, 0.160784, 1 )
text = "Go Collect"
icon = ExtResource( 9 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AvailableLabel" type="Label" parent="GeneralGUI/Control/CollectButton"]
margin_left = 21.1264
margin_top = 64.0
margin_right = 61.1264
margin_bottom = 83.0
custom_fonts/font = ExtResource( 11 )
text = "1"

[node name="MaxLabel" type="Label" parent="GeneralGUI/Control/CollectButton"]
margin_left = 37.7092
margin_top = 64.0
margin_right = 77.7092
margin_bottom = 83.0
custom_fonts/font = ExtResource( 11 )
text = "/1"

[node name="BuyCollectorButton" type="Button" parent="GeneralGUI/Control"]
margin_left = 944.0
margin_top = 865.0
margin_right = 1169.0
margin_bottom = 937.0
custom_fonts/font = ExtResource( 12 )
custom_colors/font_color_hover = Color( 0.133333, 0.792157, 0.160784, 1 )
custom_colors/font_color_pressed = Color( 0.133333, 0.792157, 0.160784, 1 )
text = "Buy Collector"
icon = ExtResource( 8 )
flat = true
clip_text = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GeneralGUI/Control/BuyCollectorButton"]
margin_left = 16.2819
margin_top = 66.4952
margin_right = 56.2819
margin_bottom = 85.4952
custom_fonts/font = ExtResource( 11 )
text = "50"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="GeneralGUI/Control/BuyCollectorButton"]
position = Vector2( 47.3521, 74.8857 )
scale = Vector2( 0.146327, 0.124728 )
texture = ExtResource( 10 )

[node name="CollectorLine" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 0, 0, 8, 0 )
width = 2.0
default_color = Color( 0.121569, 0.12549, 0.133333, 1 )
texture_mode = 1
antialiased = true

[node name="WaitingOrdersAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 9.0
max_distance = 1500.0
bus = "SFX"

[node name="GoCollectAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = 3.0
max_distance = 1500.0
bus = "SFX"

[node name="UnderAttackAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = 9.0
max_distance = 4000.0
bus = "SFX"

[node name="UnderAttackTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
[connection signal="timeout" from="RegenTimer" to="." method="_on_RegenTimer_timeout"]
[connection signal="pressed" from="GeneralGUI/Control/CollectButton" to="." method="_on_CollectButton_pressed"]
[connection signal="pressed" from="GeneralGUI/Control/BuyCollectorButton" to="." method="_on_BuyCollectorButton_pressed"]
[connection signal="timeout" from="UnderAttackTimer" to="." method="_on_UnderAttackTimer_timeout"]
